@@ -1,6 +1,10 @@
 qmake   = @ac_qmake@
 qt3to4   = @ac_qt3to4@
 
+COPY = /bin/cp
+DEL_FILE = /bin/rm
+MKDIR = /bin/mkdir
+
 name    = qjadeo
 
 headers = qjadeo.h
@@ -12,8 +16,8 @@ all:	$(name)
 
 $(name).mak:	$(name).pro
 	if test "x$(qt3to4)" != "x"; then \
-	 mkdir -p qt3; \
-	 cp -f qjadeo.cpp cp qjadeo.h mainwindow.ui qt3; \
+	 $(MKDIR) -p qt3; \
+	 $(COPY) -f qjadeo.cpp qjadeo.h mainwindow.ui qt3; \
 	 $(qt3to4) -alwaysOverwrite $(name).pro; \
 	fi
 	$(qmake) -o $(name).mak "DEFINES += BINDIR=\\\"$(bindir)\\\"" $(name).pro
@@ -25,27 +29,27 @@ install:	$(name)
 	$(INSTALL) $(name) $(bindir)/
 
 uninstall:	$(bindir)/$(name)
-	rm -vf $(bindir)/$(name)
+	$(DEL_FILE) -vf $(bindir)/$(name)
 
 .PHONY:	clean
 clean:	$(name).mak
 	$(MAKE) -f $(name).mak clean
 	if test -d qt3; then \
-	 cp -f qt3/* .; \
-	 rm -rf qt3; \
+	 $(COPY) -f qt3/* .; \
+	 $(DEL_FILE) -rf qt3; \
 	fi
-	rm -f $(name) $(name).mak
-	rm -rf *.cache *.log *.status
-	rm -rf .ui         
-	rm -rf .obj
-	rm -rf .moc
-	rm -f portinglog.txt
-	rm -rf .tmp
+	$(DEL_FILE) -f $(name) $(name).mak
+	$(DEL_FILE) -rf *.cache *.log *.status
+	$(DEL_FILE) -rf .ui         
+	$(DEL_FILE) -rf .obj
+	$(DEL_FILE) -rf .moc
+	$(DEL_FILE) -f portinglog.txt
+	$(DEL_FILE) -rf .tmp
 
 distclean:	clean
 
 maintainer-clean:	clean
-	rm -f Makefile
-	rm -f Makefile.in
-	rm -f $(name).pro
+	$(DEL_FILE) -f Makefile
+	$(DEL_FILE) -f Makefile.in
+	$(DEL_FILE) -f $(name).pro
 
