@@ -1,3 +1,7 @@
+2006-04-09  Luis Garrido  <luisgarrido@users.sourceforge.net>
+ - configure.ac: fixed Qt autoconf test so Qt4 debug lib is not required.
+ - src/qt-gui/Makefile.am: fixed typo.
+
 2006-04-08  Luis Garrido  <luisgarrido@users.sourceforge.net>
  - Fixed qjadeo makefile so the qt4 compilation keeps a backup of the qt3 
  version.
